fixed stretched carousel on main page

--- a/BenZawacki/war/css/main.less
+++ b/BenZawacki/war/css/main.less
@@ -18,6 +18,7 @@ body {
 }
 
 
+
 /* ======== CONTENT BOXES ======= */
 #content-boxes{
 	h1,h2,h3,h4{
@@ -203,8 +204,12 @@ body {
 	}
 	  
   }
-  
-  
-  
+}
 
+@media (max-width: 767px) {
+	#carousel{		
+		height: 250px;
+		max-height: 300px;
+		width: 100%;
+	}
 }
