--- a/BenZawacki/war/templates/carousels/home.less
+++ b/BenZawacki/war/templates/carousels/home.less
@@ -54,3 +54,6 @@
 }
 
 /* ======== END CAROUSEL ======== */
+@media (max-width: 767px) {
+	
+}
